[tool.poetry]
name = "spotify-tools"
version = "0.3.1"
description = "Spotify tools"
authors = ["Abel Guillen <abelazo@gmail.com>"]
readme = "README.md"
packages = [{ include = "playlist_importer" }]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115"
uvicorn = "^0.34"

[tool.poetry.group.dev.dependencies]
black = "^24"
pre-commit = "^4"
pytest = "^8"
pytest-cov = "^6"
ruff = "^0"

[tool.poetry.group.release.dependencies]
python-semantic-release = "^8.0.7"

[tool.poetry.scripts]
importer = "playlist_importer.importer:start"

[tool.pytest.ini_options]
addopts = """
    --strict-markers
    --cov playlist_importer
    --cov-report term
"""
testpaths = ["test"]
markers = [
    "ut: marks unit tests",
]

[tool.semantic_release]
version_toml = [
    "pyproject.toml:tool.poetry.version",
]
branch = "main"
build_command = "pip install poetry && poetry install && poetry build"
commit_subject = "chore(release): v{version} [skip ci]"
commit_author = "Github Actions agent <agent@github.com>"
upload_to_vcs_release = false
